kubernetes/common/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-routes-from-all
  namespace: apisix
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: common
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: staging-application
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: staging-brazil
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: staging-colombia
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: staging-ecuador
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      namespace: staging-brazil
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      namespace: staging-colombia
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      namespace: staging-ecuador
  to:
    - group: ""
      kind: Service
