kubernetes/common/waf-middleware.yaml
apiVersion: traefik.io/v1alpha1                                                                                                        
kind: Middleware                                                                                                                       
metadata:                                                                                                                              
  name: waf                                                                                                                            
  namespace: common                                                                                                                    
spec:                                                                                                                                  
  plugin:                                                                                                                              
    traefik-modsecurity-plugin:                                                                                                        
      modSecurityUrl: http://modsecurity.common.svc.cluster.local:80                                                                   
      maxBodySize: 10485760       # 10MB max request body                                                                              
      timeoutMillis: 10000        # 10s timeout to ModSecurity
