kubernetes/common/dummy-backend.yaml
apiVersion: apps/v1                                                                                                                    
kind: Deployment                                                                                                                       
metadata:                                                                                                                              
  name: dummy-backend                                                                                                                  
  namespace: common                                                                                                                    
spec:                                                                                                                                  
  replicas: 1                                                                                                                          
  selector:                                                                                                                            
    matchLabels:                                                                                                                       
      app: dummy-backend                                                                                                               
  template:                                                                                                                            
    metadata:                                                                                                                          
      labels:                                                                                                                          
        app: dummy-backend                                                                                                             
    spec:                                                                                                                              
      containers:                                                                                                                      
        - name: dummy-backend                                                                                                          
          image: nginx:alpine                                                                                                          
          ports:                                                                                                                       
            - containerPort: 80                                                                                                        
---
apiVersion: v1                                                                                                                         
kind: Service                                                                                                                          
metadata:                                                                                                                              
  name: dummy-backend                                                                                                                  
  namespace: common                                                                                                                    
spec:                                                                                                                                  
  selector:                                                                                                                            
    app: dummy-backend                                                                                                                 
  ports:                                                                                                                               
    - port: 80                                                                                                                         
      targetPort: 80
