kubernetes/common/apisix-dashboard-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: apisix-dashboard-route
  namespace: apisix
spec:
  parentRefs:
    - name: main-gateway
      namespace: apisix
      sectionName: http
  hostnames:
    - apisix-dashboard.karim-portfolio.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: apisix-dashboard
          port: 80
