kubernetes/common/kubernetes-dashboard-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard-route
  namespace: common
spec:
  parentRefs:
    - name: main-gateway
      namespace: apisix
      sectionName: http
  hostnames:
    - kubernetes-dashboard.karim-portfolio.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: headlamp
          port: 80
