kubernetes/common/vault-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-route
  namespace: common
spec:
  parentRefs:
    - name: main-gateway
      namespace: apisix
      sectionName: http
  hostnames:
    - vault-ui.karim-portfolio.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vault
          port: 8200
