kubernetes/common/vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ui-ingress
  namespace: common
  annotations:                                                                                                                         
    traefik.ingress.kubernetes.io/router.middlewares: common-waf@kubernetescrd 
spec:
  ingressClassName: traefik
  rules:
  - host: "vault-ui.karim-portfolio.xyz"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              number: 8200
